--- a/mnist/index.html
+++ b/mnist/index.html
@@ -21,6 +21,43 @@
    var labels = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
    // We convert MNIST data to 1 dimensional data
    var dimensions = [784]
+
+
+   // Model sequential, simple, linear, limited
+   var model = tf.sequential();
+   // units - how many neurons , input shape, well, obvious
+   model.add(tf.layers.dense({units: 3, inputShape: [784]}))
+   model.add(tf.layers.dense({units: 2, inputShape: [32]}))
+   // For now zero or one
+   model.add(tf.layers.dense({units: 2, inputShape: [2]}))
+
+
+   // Optimization
+   var LEARNING_RATE = 0.01;
+   var optimizer = tf.train.sgd(LEARNING_RATE)
+
+
+   model.compile({ optimizer: optimizer, loss: 'meanSquaredError',metrics: ['accuracy']})
+   // Double check output
+   console.log(JSON.stringify(model.outputs[0].shape))
+
+   // Testing with dummies
+   var positives =  tf.ones([10, 784])
+   var negatives = tf.zeros([10, 784])
+   var positive_labels = tf.ones([10, 2])
+   var negative_labels = tf.zeros([10, 2])
+
+
+   var training_data = positives.concat(negatives)
+   var training_labels = positive_labels.concat(negative_labels)
+
+   model.fit(training_data,  training_labels, {
+       epochs: 10
+   })
+   model.predict(tf.ones([1, 784])).print();
+
+
+
    </script>
 
 
